# ephcom

./: Cargo.toml  Dockerfile
.forgejo/workflows/: build.yml  build_image.yaml
client/: Cargo.toml
client/src/: client.rs  main.rs
common/: Cargo.toml
common/src/: lib.rs  prelude.rs
server/: Cargo.toml
server/src/: main.rs  websocket.rs
