[package]
name = "ephcom"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
ephcom-common.workspace = true
tokio.workspace = true
futures-util.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
version.workspace = true

rustyline-async = "0.4.7"
age = "0.11.1"
hex = "0.4.3"
sha2 = "0.10.9"
tokio-websockets = { version = "0.12.1", features = [ "client", "sha1_smol", "rand" ]}
http = "1.3.1"

[features]
tls = [ "tokio-websockets/native-tls" ]

[lints.clippy]
needless_return = "allow"