[package]
name = "ephcom-server"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
ephcom-common.workspace = true
version.workspace = true
tokio.workspace = true
futures-util.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

actix-ws = "0.3.0"
actix-web = "4.10.2"
futures-channel = "0.3.31"
rand = "0.9.2"

[lints.clippy]
needless_return = "allow"